force-app/main/default/objects/Custom_Discount__c/Custom_Discount__c.object-meta.xml
<CustomObject>
    <label>Custom Region Discount</label>
    <nameField>
        <label>Custom Discount Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Region Discounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>