force-app/main/default/objects/Custom_Discount__c/fields/Custom_Field_Custom_Object__c.field-meta.xml
<CustomField>
    <fullName>Custom_Field_Custom_Object__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Field Custom Object</label>
    <type>Checkbox</type>
</CustomField>