force-app/main/default/objects/Custom_Discount__c/fields/Discount_To_Apply__c.field-meta.xml
<CustomField>
    <fullName>Discount_To_Apply__c</fullName>
    <label>Discount To Apply</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>