force-app/main/default/objects/Custom_Discount__c/fields/Type_of_Discount__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Discount__c</fullName>
    <label>Type of Discount</label>
    <length>50</length>
    <type>Text</type>
</CustomField>